cmake_minimum_required(VERSION 3.16)
project(ch3)
set(CMAKE_CXX_STANDARD 14)
message(STATUS "This is project BINARY dir " ${PROJECT_BINARY_DIR})
message(STATUS "This is project SOURCE dir " ${PROJECT_SOURCE_DIR})
add_subdirectory(useEigen)
add_subdirectory(useGeometry)
add_subdirectory(examples)
add_subdirectory(visualizeGeometry)
