cmake_minimum_required(VERSION 3.16)
project(ch4)
set(CMAKE_CXX_STANDARD 14)
message(STATUS "This is project BINARY dir " ${PROJECT_BINARY_DIR})
message(STATUS "This is project SOURCE dir " ${PROJECT_SOURCE_DIR})

find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIRS})
#include_directories("/usr/include/eigen3")
find_package(Sophus REQUIRED)
include_directories(${SOPHUS_INCLUDE_DIRS})
add_executable(useSophus useSophus.cpp)
target_link_libraries(useSophus fmt)
#find_package(fmt REQUIRED)
#target_link_libraries(useSophus fmt::fmt)
