cmake_minimum_required(VERSION 3.16)
project(ch4-trajectory-eval)
set(CMAKE_CXX_STANDARD 14)
message(STATUS "This is project BINARY dir " ${PROJECT_BINARY_DIR})
message(STATUS "This is project SOURCE dir " ${PROJECT_SOURCE_DIR})

find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIRS})
find_package(Sophus REQUIRED)
include_directories(${Sophus_INCLUDE_DIRS})
find_package(Pangolin REQUIRED)
include_directories(${Pangolin_INCLUDE_DIRS})
add_executable(trajectoryError trajectoryError.cpp)
target_link_libraries(trajectoryError fmt ${Pangolin_LIBRARIES})
#find_package(fmt REQUIRED)
#target_link_libraries(useSophus fmt::fmt)